Added updated Atlas dockerfile